Add django-cors-headers to deps

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 psycopg2-binary = "*"
 django-environ = "*"
 djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 pre-commit = "*"
