Update env defaults

--- a/.env.defaults
+++ b/.env.defaults
@@ -2,6 +2,8 @@
 
 DEBUG=True
 SECRET_KEY=MySecretKey
+CORS_ALLOW_ALL_ORIGINS=True
+ALLOWED_HOSTS=0.0.0.0,"localhost",127.0.0.1
 
 # Database Config
 DB_HOST=db
