--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ psycopg2-binary = "*"
 django-environ = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+gunicorn = "*"
 
 [dev-packages]
 pre-commit = "*"
