--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,4 +2,4 @@
 line_length = 88
 multi_line_output = 3
 include_trailing_comma = True
-known_third_party =customers,django,environ,rest_framework,rest_framework_simplejwt
+known_third_party =customers,django,environ,rest_framework,rest_framework_simplejwt,wishlist
