--- a/.env.defaults
+++ b/.env.defaults
@@ -12,3 +12,5 @@ POSTGRES_DB=admin
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 DATABASE_URL=psql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
+
+PRODUCT_DATA_API=http://challenge-api.luizalabs.com/api/product
