--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 gunicorn = "*"
 requests = "*"
+django-filter = "*"
 
 [dev-packages]
 pre-commit = "*"
