--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -11,6 +11,7 @@ certifi==2020.12.5
 chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 django-cors-headers==3.7.0
 django-environ==0.4.5
+django-filter==2.4.0
 django==3.1.6
 djangorestframework-simplejwt==4.6.0
 djangorestframework==3.12.2
