--- a/.env.defaults
+++ b/.env.defaults
@@ -3,7 +3,7 @@
 DEBUG=True
 SECRET_KEY=MySecretKey
 CORS_ALLOW_ALL_ORIGINS=True
-ALLOWED_HOSTS=0.0.0.0,"localhost",127.0.0.1
+ALLOWED_HOSTS=0.0.0.0,localhost,127.0.0.1
 
 # Database Config
 DB_HOST=db
