--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -9,17 +9,29 @@
 asgiref==3.3.1; python_version >= '3.5'
 certifi==2020.12.5
 chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+coreapi==2.3.3
+coreschema==0.0.4
 django-cors-headers==3.7.0
 django-environ==0.4.5
 django-filter==2.4.0
 django==3.1.6
 djangorestframework-simplejwt==4.6.0
 djangorestframework==3.12.2
+drf-yasg==1.20.0
 gunicorn==20.0.4
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+inflection==0.5.1; python_version >= '3.5'
+itypes==1.2.0
+jinja2==2.11.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 psycopg2-binary==2.8.6
 pyjwt==2.0.1; python_version >= '3.6'
+pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2021.1
 requests==2.25.1
+ruamel.yaml.clib==0.2.2; python_version < '3.9' and platform_python_implementation == 'CPython'
+ruamel.yaml==0.16.12
 sqlparse==0.4.1; python_version >= '3.5'
+uritemplate==3.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 urllib3==1.26.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
