--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
   api:
     image: ${DOCKER_IMAGE-wishlist-prod}:${TAG-latest}
     build:
-      context: ./config
+      context: ./backend
       target: "prod"
     env_file:
       - .env.defaults
@@ -12,7 +12,7 @@ services:
     environment:
       - ENV=prod
     ports:
-      - 8000:8000
+      - 8000:80
 
   db:
     image: postgres
